# comic-translator

./: .gitignore  main.py  pyproject.toml
assets/: text_lines.json
assets/fonts/: __registry__.json
configs/: deepfont.yaml  deepfont_ae.yaml  font_dataset.yaml  font_net.yaml  pipeline.yaml  style_net.yaml
report/: conf.typ  main.typ
report/sections/: annotation.typ  application.typ  conclusion.typ  intro.typ  plan.typ  properties.typ  sources.typ  title.typ
report/sections/parts/: economical.typ  implementation.typ  safety.typ  theoretical.typ
src/: factory.py
src/cli/: cli.py
src/cli/commands/: __init__.py  collect_backgrounds.py  generate_dataset.py  train.py  translate.py
src/data/: dataset.py  registry.py  utils.py
src/data/generators/: __init__.py  font_generator.py
src/data/loaders/: __init__.py  base.py  comic.py  font_loader.py
src/data/transforms/: __init__.py  albumentations.py  color.py  font.py  keyed.py  ops.py
src/engine/: __init__.py  registry.py  schema.py  trainer.py  utils.py
src/engine/callbacks/: __init__.py  callback.py  callback_list.py  checkpoint_callback.py  metrics_callback.py  progress_callback.py
src/modeling/: __init__.py  registry.py
src/modeling/layers/: __init__.py  deform_conv.py
src/modeling/losses/: __init__.py  font_net_loss.py  style_net_loss.py
src/modeling/models/: __init__.py  deepfont.py  font_net.py  style_net.py
src/pipeline/: __init__.py  config.py  translation_pipeline.py
src/tasks/: __init__.py  registry.py
src/util/: __init__.py  color.py  file.py  font.py  hub.py  path.py  utils.py
(+30 files in other folders)
